Header: Slider image now displays correctly on mobile AND ipsolutions logo no longer grows larger on iPhones in landscape view

--- a/sass/_header-main.scss
+++ b/sass/_header-main.scss
@@ -1,8 +1,8 @@
 .main-logo {
   @extend .height-100-important;
   @include respond-to ('tablet-portrait') {
-    height: auto !important;
-    width: 100% !important;
+    height: 50px !important;
+    width: auto !important;
   }
 }
 
